--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -14,6 +14,7 @@ jobs:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.PRODUCTION_DB_PASSWORD }}
       SUPABASE_PROJECT_ID: ${{ secrets.PRODUCTION_PROJECT_ID }}
+      SUPABASE_INTERNAL_API_HOST: https://api.supabase.green
 
     steps:
       - uses: actions/checkout@v3
